tests/errors/E040.zen
struct data {
    value: struct unknown
}